force-app/main/default/objects/Sales_Engineering_Request__c/Sales_Engineering_Request__c.object-meta.xml
<CustomObject>
    <label>Sales Engineering Request</label>
    <nameField>
        <displayFormat>ST-{0000000000}</displayFormat>
        <label>Sales Engineering Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Engineering Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>