force-app/main/default/objects/Sales_Engineering_Request__c/fields/Account_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Account_AccountId__c</fullName>
    <formula>Opportunity__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account: AccountId</label>
    <type>Text</type>
</CustomField>