force-app/main/default/objects/Sales_Engineering_Request__c/fields/Account_BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>Account_BillingCountry__c</fullName>
    <label>Account: BillingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>