force-app/main/default/objects/Sales_Engineering_Request__c/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <inlineHelpText>How much time it takes to process</inlineHelpText>
    <label>Request due date</label>
    <type>Date</type>
</CustomField>