force-app/main/default/objects/Sales_Engineering_Request__c/fields/Main_Sales_Engineer_NXF__c.field-meta.xml
<CustomField>
    <fullName>Main_Sales_Engineer_NXF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Engineering_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>