force-app/main/default/objects/Sales_Engineering_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>The estimated working days for each type of request are shown in brackets</inlineHelpText>
    <label>Type of request support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application feasibility, incl. pretreatment requirements recommendations (2 days)</fullName>
            </value>
            <value>
                <fullName>Optimized UF/dNF design – Flux, arrangement, chemical &amp; power consumption (3 days)</fullName>
            </value>
            <value>
                <fullName>Estimation footprint (3 days)</fullName>
            </value>
            <value>
                <fullName>Technical webinar/discussion (upon availability)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>