force-app/main/default/objects/Sales_Engineering_Request__c/listViews/All_Sales_Engineering_Request.listView-meta.xml
<ListView>
    <fullName>All_Sales_Engineering_Request</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Main_Sales_Engineer_NXF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - Sales Engineering Request</label>
</ListView>