force-app/main/default/objects/Sales_Engineering_Request__c/listViews/My_All_Sales_Engineering_Requests.listView-meta.xml
<ListView>
    <fullName>My_All_Sales_Engineering_Requests</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My - All Sales Engineering Requests</label>
</ListView>