force-app/main/default/objects/Sales_Engineering_Request__c/listViews/My_Not_Started_Sales_Eng_Requests.listView-meta.xml
<ListView>
    <fullName>My_Not_Started_Sales_Eng_Requests</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>My - Not Started Sales Eng. Requests</label>
</ListView>