force-app/main/default/objects/Sales_Engineering_Request__c/listViews/Not_Started_Sales_Engineering_Request.listView-meta.xml
<ListView>
    <fullName>Not_Started_Sales_Engineering_Request</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>Not Started - Sales Engineering Request</label>
</ListView>