force-app/main/default/objects/Sales_Engineering_Request__c/listViews/Started_All_Sales_Engineering_Requests.listView-meta.xml
<ListView>
    <fullName>Started_All_Sales_Engineering_Requests</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Started</value>
    </filters>
    <label>Started - All Sales Engineering Requests</label>
</ListView>