force-app/main/default/objects/Sales_Engineering_Request__c/listViews/Unassigned_Queue.listView-meta.xml
<ListView>
    <fullName>Unassigned_Queue</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,Started</value>
    </filters>
    <label>Unassigned Queue</label>
    <queue>Unassigned_Queue</queue>
</ListView>